Implement Clerk authentication in NonDashboardNavbar, enhance middleware for role-based routing, and update global styles. Add user role handling and improve API route matching in middleware. Update package dependencies for Clerk integration.

--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.788.0",
+    "@clerk/express": "^1.4.9",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
