Add Razorpay dependency to client and server, update redirect URLs in SignIn and SignUp components, and adjust commented CSS in globals.css

--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "pluralize": "^8.0.0",
+    "razorpay": "^2.9.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
