--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.788.0",
     "@clerk/express": "^1.4.9",
+    "@types/multer": "^1.4.12",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "pluralize": "^8.0.0",
     "razorpay": "^2.9.6",
     "uuid": "^11.1.0"
